hist/0.0.3/saspacer.md
# Documentation for the `SASPACer` package.
  
----------------------------------------------------------------
 
 *SASPACer to create SAS package using excel file* 
  
----------------------------------------------------------------
 
### Version information:
  
- Package: SASPACer
- Version: 0.0.3
- Generated: 2025-04-20T17:54:48
- Author(s): Ryo Nakaya (nakaya.ryou@gmail.com)
- Maintainer(s): Ryo Nakaya (nakaya.ryou@gmail.com)
- License: MIT
- File SHA256: `F*A418BE3A487444119B51BE94FDEC16A0834689C36CF1A4A5D6DBF62C34733160` for this version
- Content SHA256: `C*10D40391C73205C995A2B4F9A667322143D70ACCB6C13567649DB3502850C865` for this version
  
---
 
# The `SASPACer` package, version: `0.0.3`;
  
---
 

### SASPACer ###
This is a package for easily creating SAS packages.
Only you need is to fill package information in the template excel (you can find in additional contents(addcnt.zip)).
SASPACer has a function(%ex2pac()) to convert excel with package information into
SAS package folders and files, and generate SAS package using %generatePackage().
(%generatePackage() is optional but executed by default)

  
---
 
  
---
 
Required SAS Components: 
  - Base SAS Software
  
---
 
  
---
 
Package contains additional content, run:  `%loadPackageAddCnt(SASPACer)`  to load it
or look for the `saspacer_AdditionalContent` directory in the `packages` fileref
localization (only if additional content was deployed during the installation process).
 
--------------------------------------------------------------------
 
*SAS package generated by SAS Package Framework, version `20241207`*
 
--------------------------------------------------------------------
 
# The `SASPACer` package content
The `SASPACer` package consists of the following content:
 
1. [`%ex2pac()` macro ](#ex2pac-macros-1 )
2. [`%ex2pac_allname()` macro ](#ex2pacallname-macros-2 )
3. [`%ex2pac_allsheet()` macro ](#ex2pacallsheet-macros-3 )
4. [`%ex2pac_set_slash()` macro ](#ex2pacsetslash-macros-4 )
  
 
5. [License note](#license)
  
---
 
## `%ex2pac()` macro <a name="ex2pac-macros-1"></a> ######

%ex2pac is a macro to convert excel with package information into
SAS package folders and files.

- Parameters
	excel_file :
		full path for excel file which contains package information
	package_location :
		location where package files to be stored.
		Subfolder named package name will be created under the location.
	complete_generation (default=Y) :
		If user want to create only package structure, please change complete_generation=N.
		By default, %ex2pac execute %generatePackage() to create .zip and .md.

- Excel file to read
	Easy to understand the structure. Take a look anyway.
	In sheets like macros, %ex2pac uses body information if body column is filled,
	while refers file in location column if body column is blank.
	(This is a situation where macros(or other files) were already created somewhere in a file and
	would like to use it instead of copying contents in body column of the excel.)

- Flow of the macro
	1. Create package subfolder in the location.
		Name of the subfolder will be set as the package name.
	2. Create description.sas
	3. Create license.sas
	4. Create subfolders like 01_formats, 02_functions, etc. in reference to
		the excel sheet names.
	5. Create sas files based on information described in each excel sheet
	6. Run %generatePackages()

- Sample code
~~~sas
%ex2pac(
	excel_file=C:\Temp\template_package_meta.xlsx,
	package_location=C:\Temp\SAS_PACKAGES\packages,
	complete_generation=Y)
~~~

- Note
  1. %ex2pac expects the operating system to be either Windows or a non-Windows environment
  (such as Linux, Unix, etc.). The %SYSSCP macro variable is used to identify the current OS.
  2. Libref named e2p_xls is used in the macro.
  3. Max length of 32767bytes is the limit in both cells in excel and reference file(.sas) in location column
  due to limitations in excel cell max length and max length of SAS variables used in the macro.

  
---
 
## `%ex2pac_allname()` macro <a name="ex2pacallname-macros-2"></a> ######

This is temporary macro used in %ex2pac.
(Called in %ex2pac_allsheet macro)

Purpose:
To create contents in xxx.sas reading excel sheet.

  
---
 
## `%ex2pac_allsheet()` macro <a name="ex2pacallsheet-macros-3"></a> ######

This is temporary macro used in %ex2pac.

Purpose:
To create sheets.

  
---
 
## `%ex2pac_set_slash()` macro <a name="ex2pacsetslash-macros-4"></a> ######

This is temporary macro used in %ex2pac.

Purpose:
To switch sepalator character(slash or back slash) based on OS.

  
---
 
  
---
 
# License <a name="license"></a> ######
 
	Copyright (c) [2025] [Ryo Nakaya]

  Permission is hereby granted, free of charge, to any person obtaining a copy  
  of this software and associated documentation files (the "Software"), to deal 
  in the Software without restriction, including without limitation the rights  
  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell     
  copies of the Software, and to permit persons to whom the Software is         
  furnished to do so, subject to the following conditions:                      
                                                                                
  The above copyright notice and this permission notice shall be included       
  in all copies or substantial portions of the Software.                        
                                                                                
  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR    
  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,      
  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE   
  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER        
  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, 
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE 
  SOFTWARE.                                                                 
 
  
---
 
